crates/oracledb/tests/trybuild/fail/enum.rs
use oracledb::FromRow;

#[derive(FromRow)]
enum Row {
    Named { id: i64 },
}

fn main() {}
